k8s/media-services/jellyfin-media/jellystat/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat-db
  namespace: default
  labels:
    app: jellystat
    component: database
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellystat
      component: database
  template:
    metadata:
      labels:
        app: jellystat
        component: database
    spec:
      containers:
        - name: postgres
          image: postgres:15.2
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 1Gi
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: jellystat-postgres-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellystat
  namespace: default
  labels:
    app: jellystat
    component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellystat
      component: app
  template:
    metadata:
      labels:
        app: jellystat
        component: app
    spec:
      containers:
        - name: jellystat
          image: cyfershepard/jellystat:latest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: backup-data
              mountPath: /app/backend/backup-data
      volumes:
        - name: backup-data
          persistentVolumeClaim:
            claimName: jellystat-backup-data
